Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
6.0.0
-
None
-
-
661b586a69740bd9a1791622f8b238d290ebe00d (qt/qtbase/dev)
Description
The qmake call
qmake -qtconf foo.conf -query
fails with the error message
***Unknown option -query
Changing the argument order works:
qmake -query -qtconf foo.conf
This is a nuisance for the host qmake wrappers of Qt 6 cross builds.
Attachments
Issue Links
- relates to
-
QTBUG-82581 Support cross-compilation with qmake
-
- Closed
-
-
QTBUG-87801 qmake shell wrapper doesn't handle -install qinstall command properly
-
- Closed
-